# motorist

./: CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: call_back.c  call_back.h  igra.c  igra.h  interpolacija.c  interpolacija.h  main.c  matrika.c  matrika.h  shaderji.c  shaderji.h  slicica.c  slicica.h  test.py
